--- a/index.html
+++ b/index.html
@@ -1,29 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Hulu Replica</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Proza+Libre&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/main.css" />
-  </head>
-  <body>
-    <!-- HULU! -->
 
-    <!-- body wrapper -->
-    <div class="body-wrapper">
-      <div class="top-area">
-        <div class="top-area-body">
-          <h2>NEW! Watch live sports, news and entertainment on Hulu.</h2>
-          <a href="#">Learn More</a>
-        </div>
-        <button class="top-section-button">x</button>
-      </div>
-    </div>
-    <!-- end body wrapper -->
-  </body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<title>Netflix</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/main.css" />
+</head>
+
+<body>
+	<!--    Netflix-->
+
+	<div class="wrapper1 darken-overlay">
+		<div>
+			<header>
+				<nav class="top-nav">
+					<a class="main" href="#">
+						<h2>Netflix</h2>
+					</a>
+					<a class="button" href="#">Sign In</a>
+				</nav>
+			</header>
+			<div class="text-wrapper">
+				<h1>See what's next.</h1>
+				<h3>Watch anywhere. cancel anytime.</h3>
+				<a class="giant-button" href="#"><span class="trial"> Try 30 days free</span> <span class="greater-than">></span> </a>
+			</div>
+		</div>
+	</div>
+
+	<section class="icons">
+
+		<ion-icon name="mail-open"></ion-icon>
+		<ion-icon name="tv">Watch Anywhere</ion-icon>
+		<ion-icon name="pricetag">Pick Your Price</ion-icon>
+	</section>
+
+	<section class="dark-bg">
+		<p>If you decide Netflix isn't for you - no problem. No commitment. Cancel online anytime.</p>
+		<a href="#">try 30 days free</a>
+	</section>
+
+
+
+	<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+</body>
+
 </html>
